2012-06-28  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Print "Output:" title before blank line.

	* src/wordseg.cpp (main):
	  - [plain text] Previous commit introduced title-less output
	    for blank line. Reorder the steps it to fix.

2012-06-28  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Source clean up.

	* src/wordseg.cpp (main):
	  - Replace fgetc() loop with fgets().
	  - [plain text] Also print a blank line in response to blank input.

2012-06-28  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Source clean up.

	* src/wordseg.cpp (main):
	  - Move some vars into code block where they're used.
	  - Fix var name spelling 'thaifag' -> 'thaiFlag'.

2012-06-27  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Source clean up.

	* src/wordseg.cpp (SplitToken):
	  - Drop unused var 'i'.
	  - Rearrange loop condition and make assignments concise.

2012-06-27  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Source clean up.

	* src/wordseg.cpp:
	  - Drop myisspace() and just use libc isspace().
	  - Drop unused functions RemoveJunkChars() and IsValidChar().

2012-06-27  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Make RTFToken methods inline.

	* src/filterrtf.cpp (RTFToken):
	  - Make methods inline functions.

2012-06-27  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Rearrange functions so get related functions closer.

	* src/filterrtf.cpp:
	  - Move chgCharState() to near GetNextToken().

2012-06-26  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Rewrite RTF reader for Unicode support.

	* src/worddef.h (isThaiUni, uni2tis):
	  - Add utility functions for UCS checking & conversion.
	* src/filterrtf.h, src/filterrtf.cpp:
	  - Make chgCharState() member returns token as object, rather than
	    letting the caller does all the jobs.
	  - Add class RTFToken with its manipulation methods.
	  - Rewrite FilterRTF::GetNextToken() based on the extended state
	    machine.